# deep

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  perf.data  perf.data.old
.github/workflows/: ci.yml  compilation.yml  compiling.yml  execution.yml  formatting.yml  testing.yml
SSH_sync/_results/Astar_GNN/: monolithic_combined_results.tex
SSH_sync/_results/Astar_GNN/SC_Rich/: SC_Rich_combined.tex
SSH_sync/_results/BFS/: monolithic_combined_results.tex
SSH_sync/_results/BFS/SC_Rich/: SC_Rich_combined.tex
compilation_tools/: Makefile_Original
data/: samples.pt
docs/: Doxyfile.in
exp/Grapevine/Grapevine_5/: Grapevine_5__pl_5.txt
exp/SC_Multi/SC_9_11/: SC_9_11__pl_6.txt
exp/aaai26/alternatives/gossip/: gossip_4_3_1.txt  gossip_4_3_4.txt  gossip_4_4_3.txt  (+2 more)
exp/aaai26/batch1/: README.md
exp/aaai26/batch1_refined/: README.md
exp/aaai26/batch2/: README.md
exp/aaai26/batch3/: README.md
exp/aaai26/batch4/: README.md
exp/aaai26/batch5/: README.md
exp/aaai26/exp_batch1/: README.md
exp/aaai26/exp_batch2/: README.md
exp/aaai26/exp_batch3/: README.md
exp/aaai26/exp_batch4/: README.md
exp/aaai26/reports/: all_results.blg  all_results.tex
exp/all/CoinBox_Rich/: Coin_in_the_Box__pl_9.txt
exp/gnn_exp/: README.md
exp/gnn_exp/NEW_batch1/: README.md
exp/gnn_exp/NEW_batch2/: README.md
exp/gnn_exp/NEW_batch_ablation/: README.md
exp/gnn_exp/batch1/: README.md
exp/gnn_exp/batch1_refined/: README.md
exp/gnn_exp/batch2/: README.md
exp/gnn_exp/batch3/: README.md
exp/gnn_exp/batch4/: README.md
exp/gnn_exp/batchCC/: README.md
exp/gnn_exp/batchCumulativeTest/: README.md
exp/gnn_exp/batchTest/: README.md
exp/gnn_exp/batch_CC/: README.md
exp/gnn_exp/batch_ablation/: README.md
exp/gnn_exp/batch_ablation_test/: README.md
exp/gnn_exp/extra/: README.md
exp/gnn_exp/reports/: all_results.tex
exp/scalability/Coin_In_The_Box_Rich/: Coin_in_the_Box__pl_10.txt  Coin_in_the_Box__pl_13.txt  Coin_in_the_Box__pl_15.txt  Coin_in_the_Box__pl_18.txt  Coin_in_the_Box__pl_2.txt  Coin_in_the_Box__pl_21.txt  Coin_in_the_Box__pl_23.txt  Coin_in_the_Box__pl_3.txt  Coin_in_the_Box__pl_5.txt  Coin_in_the_Box__pl_6.txt  Coin_in_the_Box__pl_7.txt
include/domain/: domain.h
include/parse/: lcp.lex  lcp.y
include/states/possibilities/: pstate.cpp
include/utilities/: define.h  reader.h
lib/RL/: check.py  make_prediction.py  requirements.txt  run_check.sh  run_prediction.sh  utils.py
lib/RL/models/: C.txt  GNN_model_default.pt  classifier.pt  distance_estimator.pt  estimator.pt
lib/bisimulation/: bisimulation.cpp  bisimulation.h
lib/gnn_handler/: .gitignore  README.md  __main__.py  check_model.py  requirements.txt  setup.py
lib/gnn_handler/models/: distance_estimator.pt  distance_estimator_info.txt  history_losses.json
lib/gnn_handler/src/: model.py  preprocessing.py  utils.py
scripts/: coverage_run.py  dot_to_pdf.sh  dot_to_png.sh
scripts/aaai26/: aaai_coverage_run.py  cleaningAAAIdataset.py  combine.py  compare_results.py  create_all_training_data.py  create_training_data.py  generate_summary_tables.py  plot_scaling.py  tex_to_csv.py  train_models.py
scripts/gnn_exp/: bulk_coverage_run.py  combine.py  compare_results.py  create_all_training_data.py  create_training_data.py  generate_summary_tables.py  plot_scaling.py  run_batch.py  train_models.py
scripts/old/EFP_scripts/: gen_table.py
scripts/tables_tex_management/: 1_combine_results_in_csv.py  2_make_latex_table.py  CPG.txt  LPG.txt  SPG.txt  aggregate_counter.py  countSolvedInstances.py  heur_comp.py  merged_table.tex  original_table.tex
src/: main.cpp
src/actions/: Action.cpp  Action.h  Proposition.cpp  Proposition.h  action.cpp  proposition.cpp
src/argparse/: ArgumentParser.cpp  ArgumentParser.h  Configuration.cpp  Configuration.h
src/bisimulation/: Bisimulation.cpp  Bisimulation.h  BisimulationVectorStorage.h  VectorBisWrapper.h
src/domain/: Domain.cpp  Domain.h  Grounder.cpp  Grounder.h  InitialStateInformation.cpp  InitialStateInformation.h  domain.cpp  grounder.cpp  grounder.h  initially.cpp  initially.h
src/formulae/: BeliefFormula.cpp  BeliefFormula.h  belief_formula.cpp  belief_formula.h
src/heuristics/: HeuristicsManager.cpp  HeuristicsManager.h  HeuristicsManager.tpp  heuristics_manager.cpp  heuristics_manager.h  heuristics_template.ipp  planning_graph.cpp  planning_graph.h  planning_graph_template.ipp  satisfied_goals.cpp  satisfied_goals.h
src/heuristics/heuristics_strategies/: GraphNN.h  SatisfiedGoals.cpp
src/heuristics/strategies/: SatisfiedGoals.cpp  SatisfiedGoals.h
src/parse/: BeliefFormulaParsed.cpp  BeliefFormulaParsed.h  Reader.cpp  Reader.h  lcp.lex  lcp.y
src/search/: PortfolioSearch.cpp  PortfolioSearch.h  SpaceSearcher.h  SpaceSearcher.tpp  old.cpp  old.h  planner.h  planner.ipp
src/search/search_strategies/: BestFirst.h  BreadthFirst.h  DepthFirst.h  IterativeDepthFirst.h
src/states/: State.h  State.tpp  state_T.h  state_T.ipp
src/states/kripke/: KripkeState.cpp  KripkeState.h  KripkeStorage.cpp  KripkeStorage.h  KripkeWorld.cpp  KripkeWorld.h
src/states/possibilities/: pstate.cpp  pstate.h  pworld.cpp  pworld.h
src/utilities/: Define.h  ExitHandler.h  FormualaHelper.cpp  FormulaHelper.cpp  FormulaHelper.h  HelperPrint.cpp  HelperPrint.h  Reader.cpp  Reader.h  SetHelper.h  helper.cpp  helper.h  pch.h  printer.cpp  printer.h  reader.cpp  reader.h
test_model/new/: distance_estimator.onnx
test_model/old/: distance_estimator.onnx
test_model/res/: distance_estimator.onnx
utils/: history_losses.json
utils/configs/: config.ut
utils/onnx_test/: CMakeLists.txt  model.onnx  model_creation.py  onnx_test.cpp  run_test.sh  test_onnx.cpp
utils/plans/: plan.ut
utils/push_check/experiments/: CC_2_3_4__pl_3.txt  CC_3_3_3__pl_5.txt
utils/push_check/scripts/: overall_test.sh  test_execution.sh  test_planning.sh
utils/resources/: aaai.docx  debugging-code-line.txt
utils/resources/debug/: debugging-code-line.txt
utils/torch_test/: CMakeLists.txt  run_test.sh  test_libtorch.cpp
(+1148 files in other folders)
